--- a/MemoryManagement.csproj
+++ b/MemoryManagement.csproj
@@ -1,9 +1,4 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
-  <ItemGroup>
-    <ProjectReference Include="..\MemoryManagement\MemoryManagement.csproj" />
-  </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="benchmarkdotnet" Version="0.11.5" />
   </ItemGroup>
@@ -11,6 +6,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
 </Project>
